--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image:images/2.jpg;
+    background-image: url("images/2.jpg");
     color:white;
     background-position: center;
     background-size: 2000px;
@@ -29,7 +29,7 @@ nav{
     font-size: xx-large;
 }
 .log{
-    background-image:images/aaa.png;
+    background-image: url("images/aaa.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
