--- a/css/menu.css
+++ b/css/menu.css
@@ -2,7 +2,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-image: linear-gradient(rgb(255,255,255,0.9),rgba(255,255,255,0.9)), url(bg3.jpg);
+    background-image: linear-gradient(rgb(255,255,255,0.9),rgba(255,255,255,0.9)), url(../bg3.jpg);
     background-repeat: no-repeat;
     background-position: center;
 }
