--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ nav{
     font-size: xx-large;
 }
 .log{
-    background-image: url(aaa.png);
+    background-image: url(../aaa.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
