--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: url(/AJ/images/bg1.jpg);
+    background-image: url(../bg1.jpg);
 }
 .links li a{
     text-decoration: none;
