--- a/contact.css
+++ b/contact.css
@@ -113,7 +113,7 @@ justify-content: center;
     margin: -8px;
     padding: 0px;
     color: white;
-    background-image: linear-gradient(rgb(0,0,0,0.5),rgba(255,255,255,0.1)), url(/AJ/images/bg5.jpg);
+    background-image: linear-gradient(rgb(0,0,0,0.5),rgba(255,255,255,0.1)), url(bg5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
